# ros2-robot-stack

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  hf_entrypoint.sh  package.json  system-index.json  test.js  vercel.json
.agent/: how-to-think.md  project-memory.md
.agent/decisions/: 001-aliases-vs-scripts.md  002-ros-python-env.md  003-vertical-slicing.md  004-ui-library.md
.agent/rules/: how-to-think.md  persona.md  system-manifesto.md
.agent/workflows/: build.md  deploy.md  dev-start.md  lint.md  ros2-launch.md  test.md  type-check.md
.github/workflows/: deploy.yml
apps/backend/: package.json  tsconfig.json
apps/backend/src/: index.ts
apps/backend/src/modules/telemetry/: telemetry.gateway.ts
apps/frontend/: eslint.config.mjs  next.config.ts  package.json  tailwind.config.js.bak  tsconfig.json  vercel.json
apps/frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/frontend/app/diagnostics/: page.tsx
apps/frontend/app/map/: page.tsx
apps/frontend/app/projects/drone/: page.tsx
apps/frontend/app/projects/hand/: page.tsx
apps/frontend/app/projects/swarm/: page.tsx
apps/frontend/app/robots/[id]/: page.tsx
apps/frontend/app/settings/: page.tsx
apps/frontend/components/: ErrorBoundary.tsx
apps/frontend/components/layout/: DashboardLayout.tsx  Header.tsx  RightPanel.tsx  RightPanelContext.tsx  Sidebar.tsx
apps/frontend/components/layout/panel-content/: DashboardPanelContent.tsx  HandPanelContent.tsx  RobotPanelContent.tsx
apps/frontend/components/map/: MapDisplay.tsx
apps/frontend/components/scene/: HandViewer.tsx  LidarScanner.tsx  RobotViewer.tsx
apps/frontend/components/scene/assets/: BionicHand.tsx  CyberAmr.tsx  DestinationMarker.tsx  PathLine.tsx
apps/frontend/components/scene/hooks/: useChaseCamera.ts  useRobotPose.ts
apps/frontend/components/telemetry/: RobotControlPanel.tsx  TeleopPanel.tsx
apps/frontend/hooks/: useFleetTelemetry.ts
apps/frontend/public/: manifest.json
apps/frontend/utils/: errorTracking.ts  socket.ts
apps/ml-service/: pyproject.toml
apps/ml-service/src/ml_service/: __init__.py
docs/planning/: AGENT_HANDOFF.md  RFC-001-vertical-architecture.md  RFC-002-telemetry-streaming.md
infra/: docker-compose.yml
quickdraw_badge/: README.md
robotics/ros2_ws/: Dockerfile
robotics/ros2_ws/src/amr_navigation/: CMakeLists.txt  package.xml  setup.py
robotics/ros2_ws/src/amr_navigation/config/: map.pgm  map.yaml  nav2_params.yaml
robotics/ros2_ws/src/amr_navigation/launch/: amr_nav.launch.py
robotics/ros2_ws/src/amr_navigation/maps/: .gitkeep
robotics/ros2_ws/src/simulation_manager/: .flake8  CMakeLists.txt  package.xml
robotics/ros2_ws/src/simulation_manager/launch/: multi_robot.launch.py
robotics/ros2_ws/src/simulation_manager/src/: mock_robot.py
scripts/: dev-all.sh  vercel-ignore.sh
