[project]
name = "ml-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mayank", email = "87810082+steeltroops-ai@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
