<?xml version="1.0"?>
<package format="3">
  <name>amr_navigation</name>
  <version>0.0.1</version>
  <description>Nav2 Configuration for AMR</description>
  <maintainer email="steeltroops.ai@gmail.com">Mayank</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav2_util</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
